@@ -14,3 +14,4 @@
 - Check whether the member has the ignored roles in the setup command
 - Improved show kick command
 - Monitor system setup process
+- Monitor message process
